--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.1.5",
     "@types/node-cache": "^4.2.5",
     "@types/socket.io": "^3.0.2",
+    "@types/joi": "^17.2.3",
     "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "neo4j-driver": "^5.8.0",
     "node-cache": "^5.1.2",
     "socket.io": "^4.6.1",
