--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "db": "docker-compose up -d db"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.1.5",
     "@types/node-cache": "^4.2.5",
     "@types/socket.io": "^3.0.2",
-    "@types/joi": "^17.2.3",
     "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
@@ -24,8 +25,10 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "neo4j-driver": "^5.8.0",
     "node-cache": "^5.1.2",
     "socket.io": "^4.6.1",
