--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
