--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-cache": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
+    "tsyringe": "^4.8.0",
     "uuid": "^9.0.0"
   }
 }
