--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ DB_ALGO=true
 #Server config
 PORT=3001
 IP=0.0.0.0
+
+#s3
+AWS_ACCESS_KEY_ID=AKIA4RSWDCNZG3KGHQW2
+AWS_SECRET_ACCESS_KEY=76KwS/mbR3fCT+0HeufBhkwxhT2J0xWESHGxWgcw
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=project-4l-uploads-files
