--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
@@ -32,7 +31,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.1463.0",
+    "@aws-sdk/client-s3": "^3.423.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
